...
    const params = {
      isRecovery: true,
    };
    navigation.navigate(AuthNav.RegisterUser1, params);
  };
  return (
    <CSafeAreaViewAuth testID="selectRecuperationContainer">
      <CHeader
        testID="selectRecuperationHeader"
        title={String.recoveryWallet}
        onPressBack={() => navigation.navigate(AuthNav.Connect)}
      />
      <KeyBoardAvoidWrapper
...
