...
      <View style={stylesx.flagCheckOutline} />
    </View> */}
    <View
      testID="homeMiVotoLogoText"
      style={{ marginLeft: getResponsiveSize(6, 8, 10) }}
    >
      <CText testID="homeMiVotoLogoTitle" style={stylesx.logoTitle}>
        Tu Voto Decide
      </CText>
      <CText testID="homeMiVotoLogoSubtitle" style={stylesx.logoSubtitle}>
        Control ciudadano del voto
      </CText>
    </View>
...
