...
      </View>
      <KeyBoardAvoidWrapper
        contentContainerStyle={styles.flexGrow1}
        testID="loginUserKeyboardContainer">
        <View
          style={localStyle.mainContainer}
          testID="loginUserContentContainer">
          <View>
            <CText
              type={'B24'}
              style={localStyle.headerTextStyle}
              align={'center'}
              testID="loginUserTitle">
              {String.login}
            </CText>

            <OTPTextInput
              testID="textInput"
              inputCount={4}
              containerStyle={localStyle.otpInputViewStyle}
              keyboardType="number-pad"
              handleTextChange={code => {
                if (code.length === 4) {
                  onCodeFilled(code);
...
          onPress={onPressLoginUser1}
          title={String.connectBtnForgot}
          type={'B16'}
          containerStyle={localStyle.btnStyle}
          color={colors.white}
          bgColor={commonColor.gradient2}
          testID="loginUserForgotPasswordButton"
        />
      </View>
      {loading && (
        <View style={localStyle.loadingOverlay} testID="loginUserLoading">
          <ActivityIndicator size="large" color={colors.white} />
          <CText type="B16" color={colors.white} style={styles.mt10}>
...
