import { BACKEND_IDENTITY, IDENTITY_KEY } from '@env';
import React, { useCallback, useState } from 'react';
import { Alert, StyleSheet, View } from 'react-native';
import { useSelector } from 'react-redux';

// Custom imports

import debounce from 'lodash.debounce';
import wira from 'wira-sdk';
import { moderateScale } from '../../common/constants';
import StepIndicator from '../../components/authComponents/StepIndicator';
import CButton from '../../components/common/CButton';
import CHeader from '../../components/common/CHeader';
import CSafeAreaViewAuth from '../../components/common/CSafeAreaViewAuth';
import CText from '../../components/common/CText';
import KeyBoardAvoidWrapper from '../../components/common/KeyBoardAvoidWrapper';
import UploadCardImage from '../../components/common/UploadCardImage';
import String from '../../i18n/String';
import { AuthNav } from '../../navigation/NavigationKey';
import { styles } from '../../themes';

import SimpleModal from '../../components/modal/SimpleModal';
import CInput from '@/src/components/common/CInput';
import CIconButton from '@/src/components/common/CIconButton';
import { captureError } from '@/src/config/sentry';

export default function RegisterUser2({navigation, route}) {
  const isRecovery = !!route?.params?.isRecovery;
  const colors = useSelector(state => state.theme.theme);
  const [frontImage, setFrontImage] = useState(null);
  const [backImage, setBackImage] = useState(null);
  const [idNumber, setIdNumber] = useState('');
  const [isModalVisible, setModalVisible] = useState({
    visible: false,
    message: null,
  });
  const [submitting, setSubmitting] = useState(false);

  const isFormValid = () => idNumber.trim() !== '' && frontImage && backImage;

  const closeModal = () => {
    setModalVisible({visible: false, message: null});
  };

  const navigateToAlternateScreen = () => {
    setModalVisible({visible: false, message: null});
    if(isRecovery) {
      navigation.reset({
        index: 1,
        routes: [
          {
            name: AuthNav.Connect,
          },
          {
            name: AuthNav.RegisterUser1,
          },
        ],
      });
    } else {
      navigation.reset({
        index: 1,
        routes: [
          {
            name: AuthNav.Connect,
          },
          {
            name: AuthNav.SelectRecuperation,
          },
        ],
      });
    }
  }

  const handleCheckAndNext = useCallback(
    debounce(() => {
      const trimmedId = idNumber.trim();

      if (trimmedId === '') {
        return;
      }

      setSubmitting(true);
      setModalVisible({visible: false, message: null});

      const api = new wira.RegistryApi(BACKEND_IDENTITY, IDENTITY_KEY);
      api
        .registryCheckByDni(trimmedId)
        .then(({exists}) => {
          setSubmitting(false);

          const dniExistsOnRegisterTry = exists && !isRecovery;
          const dniNotFoundOnRecoveryTry = !exists && isRecovery;

          if (dniExistsOnRegisterTry || dniNotFoundOnRecoveryTry) {
            setModalVisible({
              visible: true,
              message: <View style={{display: 'flex', alignItems: 'center'}}>
                <CText type="B18" align="center">
                  {String.DniIssueTitle}
                </CText>
                <CText type="B18" align="center" style={{fontWeight: 'bold'}}>
                  {trimmedId}
                </CText>
                <CText type="B18" align="center" style={styles.mb20}>
                  {dniExistsOnRegisterTry ? String.DniExists : String.DniNotFoundMsg}
                </CText>
              </View>
            });
            return;
          }

          if(!isFormValid()) {
            return;
          }

          navigation.navigate(AuthNav.RegisterUser3, {
            dni: trimmedId,
            frontImage,
            backImage,
            isRecovery,
          });
        })
        .catch(err => {
          setSubmitting(false);
          const msg =
            err?.response?.data?.message || err.message || String.error;

          if (msg.includes('Network Error')) {
            Alert.alert(String.error, String.networkError);
          } else {
            captureError(err, {
              flow: 'RegisterUser2',
              step: 'handleCheckAndNext',
              critical: true,
            });
            Alert.alert(String.error, msg);
          }
        });
    }, 500),
    [
      idNumber,
      frontImage,
      backImage,
      navigation,
      isRecovery,
    ],
  );

  const renderInputLoader = () => {
    if (submitting) {
      return <CIconButton name='loading' color={colors.primary} size={moderateScale(25)} rotate={true} />
    }
    return null;
  }

  return (
    <CSafeAreaViewAuth testID="registerUser2Container">
      <StepIndicator testID="registerUser2StepIndicator" step={2} />
      <CHeader testID="registerUser2Header" />
      <KeyBoardAvoidWrapper
        testID="registerUser2KeyboardWrapper"
        containerStyle={[
          styles.justifyBetween,
          styles.flex,
          {top: moderateScale(10)},
        ]}>
        <View style={localStyle.mainContainer}>
          <CText
            testID="idVerificationTitle"
            type={'B20'}
            style={styles.boldText}
            align={'center'}>
            {String.idVerificationTitle}
          </CText>

          <CText
            testID="idVerificationSubtitle"
            type={'B16'}
            align={'center'}>
            {isRecovery ? String.toRecovery : String.toContinue}
            {String.idVerificationSubtitle}
          </CText>

          <CInput
            _value={idNumber}
            testID="idNumberInput"
            label={String.idLabel}
            typeText="B14"
            labelTextColor={colors.textColor}
            toGetTextFieldValue={setIdNumber}
            onEndEditing={handleCheckAndNext}
            placeHolder={String.idPlaceholder}
            rightAccessory={renderInputLoader}
            _editable={!submitting}
            input
          />

          <UploadCardImage
            testID="frontCardUpload"
            label={String.frontLabel}
            image={frontImage}
            setImage={setFrontImage}
            editable={!submitting}
          />

          <UploadCardImage
            testID="backCardUpload"
            label={String.backLabel}
            image={backImage}
            setImage={setBackImage}
            editable={!submitting}
          />
        </View>
      </KeyBoardAvoidWrapper>
      <View
        testID="registerUser2BottomContainer"
        style={localStyle.bottomTextContainer}>
        <CButton
          testID="continueVerificationButton"
          disabled={!isFormValid() || submitting}
          title={submitting ? String.checking : String.continueButton}
          onPress={handleCheckAndNext}
          type="B16"
          containerStyle={localStyle.btnStyle}
        />
      </View>
      <SimpleModal
        testID="registerUser2DniExistsModal"
        visible={isModalVisible.visible}
        message={isModalVisible.message}
        okBtn={isRecovery ? String.register : String.recoveryAccount}
        onPressOk={navigateToAlternateScreen}
        closeCornerBtn
        onClose={closeModal}
      />
    </CSafeAreaViewAuth>
  );
}

const localStyle = StyleSheet.create({
  mainContainer: {
    ...styles.ph20,
    gap: 5,
  },
  input: {
    borderWidth: 1,
    borderRadius: 10,
    paddingHorizontal: 12,
    paddingVertical: 10,
    marginBottom: moderateScale(10),
    fontSize: 16,
  },
  btnStyle: {
    ...styles.selfCenter,
  },
  bottomTextContainer: {
    ...styles.ph20,
    gap: 5,
  },
});
