...
    "necesitamos que subas fotos claras de tu carnet de identidad:",
  idLabel: "Número de carnet",
  idPlaceholder: "Escribe tu número de CI",
  frontLabel: "Anverso",
  backLabel: "Reverso",
  checking: "Verificando...",
  recoveryAccount: "Recuperar cuenta",
  DniExists: "Ya fue registrado, intente recuperar su cuenta.",
  DniIssueTitle: "El carnet:",
  DniNotFoundMsg: "No se ha encontrado, regístrese por favor.",
  // Page 3
  titleCamera: "Verificación facial",
  description_note: "Prepárate para una selfie",
...
