...
            </CText>
          </ScrollView>
          {!isLoading &&
            <>
            <CButton
              title={buttonText}
              testID="loadingModalCloseButton"
              disabled={isLoading}
              type="M16"
              containerStyle={base.button}
              onPress={onClose}
            />
            { secondBtn &&
...
