...
            </CText>
          }
        />
      </KeyBoardAvoidWrapper>
      <View testID="registerUser3Footer" style={localStyle.bottomTextContainer}>
        <CButton
          testID="scanFaceButton"
          title={String.button_scan_face}
          onPress={onPressNext}
          type={'B16'}
          containerStyle={localStyle.btnStyle}
        />
      </View>
...
