appId: com.tuvotodecide
name: blockAccount
---
- launchApp
- tapOn:
    id: connectLoginButton

- repeat:
    times: 4
    commands:
      - inputText: 9999
      - assertVisible:
          id: loginUserInfoModalContainer
      - tapOn:
          id: loginUserInfoModalButton

- inputText: 9999
- assertVisible: '.*${MAESTRO_BLOCK_LOGIN_MSG}.*'
- tapOn:
    id: loginUserInfoModalButton
- assertVisible:
    id: selectRecuperationContainer
- stopApp
- launchApp
- tapOn:
    id: connectLoginButton
- tapOn:
    id: accountLockRecoveryButton
- stopApp