appId: com.tuvotodecide
---
- runFlow:
    when:
      notVisible:
        id: loginUserContentContainer
    file: ./simpleActions/pressLogin.yaml

- tapOn:
    id: textInput

- inputText: ${PIN}

- assertVisible:
    id: homeMiVotoLogoTitle

- assertVisible:
    text: '.*${MAESTRO_SELF_NAME}.*'
