appId: com.tuvotodecide
name: failedRecoveryGuardian
onFlowStart:
  - runFlow: 
        file: ../../components/setup/initialSetup.yaml
        env:
            CHANGE_USER: 'true'
            USER: ${MAESTRO_FIRST_USER_PHOTO_NAME}
---
- runFlow:
    when:
        visible:
            id: homeMiVotoLogoTitle
    file: ../../components/auth/logout.yaml
    
- tapOn:
    id: connectLoginButton

- tapOn:
    id: loginUserTitle

- tapOn:
    id: loginUserForgotPasswordButton
    
#Script RecoveryQR component
- runFlow: 
    file: ../../components/recovery/recoveryGuardian.yaml
    env:
        TEST_TYPE: fail
        ID_NUMBER: '999999'

