appId: com.tuvotodecide
name: successfulRecoveryGuardian
onFlowStart:
  - runFlow: 
      file: ../../components/setup/initialSetup.yaml
      env:
          CHANGE_USER: 'true'
          USER: ${MAESTRO_FIRST_USER_PHOTO_NAME}
---
- runFlow:
    when:
        visible:
            id: homeMiVotoLogoTitle
    file: ../../components/auth/logout.yaml
- tapOn:
    id: connectLoginButton

- tapOn:
    id: loginUserTitle

- tapOn:
    id: loginUserForgotPasswordButton
    
#Script RecoveryGuardian component
- runFlow: 
    file: ../../components/recovery/recoveryGuardian.yaml
    env:
        TEST_TYPE: pass
        ID_NUMBER: ${MAESTRO_PRINCIPAL_ID}

